--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
    "version": "1.1.0",
    "license": "AGPL-3.0-or-later",
    "dependencies": {
-      "handlebars": "^4.7.6",
+      "accept-language-parser": "^1.5.0",
       "serve-static": "^1.14.1",
       "socket.io": "^2.3.0"
    },
