--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
    "license": "AGPL-3.0-or-later",
    "dependencies": {
       "accept-language-parser": "^1.5.0",
+      "handlebars": "^4.7.6",
+      "polyfill-library": "^3.89.4",
       "serve-static": "^1.14.1",
       "socket.io": "^2.3.0"
    },
